@@ -1,3 +1,15 @@
 
+  access                                                            1
+  arch_prctl                                                        1
+  brk                                                               1
+  exit_group                                                        1
+  munmap                                                            1
+  read                                                              1
+  close                                                             2
+  newfstat                                                          2
+  mprotect                                                          3
+  newstat                                                           4
+  open                                                              6
+  mmap                                                              8
 -- @@stderr --
 dtrace: script 'test/demo/script/syscall.d' matched 296 probes
